Rackspace.Utilities/alertlogic-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "2019.05.01.0",
  "parameters": {
    "Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the NSG to update"
      }
    },
    "DestinationPrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the subnet this NSG is attached to"
      }
    }
  },
  "variables": {
    "alertlogicIPRange1": "204.110.218.96/27",
    "alertlogicIPRange2": "204.110.219.96/27",
    "alertlogicIPRange3": "208.71.209.32/27"
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_VNET_TO_ALT_7777_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow_VNET_TO_ALT_7777_INBOUND",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "7777",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 136,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_VNET_TO_ALT_443_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow_VNET_TO_ALT_443_INBOUND",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 137,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/ssh-rule-1')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('alertlogicIPRange1')]",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 3994,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/ssh-rule-2')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('alertlogicIPRange2')]",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 3995,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/ssh-rule-3')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('alertlogicIPRange3')]",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 3996,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/pwaf-rule-1')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow WSM UI",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "4849",
        "sourceAddressPrefix": "[variables('alertlogicIPRange1')]",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 3997,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/pwaf-rule-2')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow WSM UI",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "4849",
        "sourceAddressPrefix": "[variables('alertlogicIPRange2')]",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 3998,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/pwaf-rule-3')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow WSM UI",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "4849",
        "sourceAddressPrefix": "[variables('alertlogicIPRange3')]",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 3999,
        "direction": "Inbound"
      }
    }
  ],
  "outputs": {
  }
}
