Rackspace.Utilities/application-gateway-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "2019.04.01.0",
  "parameters": {
    "Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the NSG to update"
      }
    },
    "DestinationPrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the subnet this NSG is attached to"
      }
    }
  },
  "variables": {
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_Internet_Inbound_HTTP')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows inbound http to the Application Gateway subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "80",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 133,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_Internet_Inbound_HTTPS')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows inbound https to the Application Gateway subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 134,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_TCP_UDP_65200_65535')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allow TCP and UDP 65200_65535",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "65200-65535",
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 135,
        "direction": "Inbound"
      }
    }
  ],
  "outputs": {
  }
}
