Rackspace.Utilities/octopus-agent-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "2019.05.01.0",
  "parameters": {
    "Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the NSG to update"
      }
    },
    "SourcePrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the Octopus subnet"
      }
    },
    "DestinationPrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the subnet this NSG is attached to"
      }
    },
    "Mode": {
      "type": "string",
      "allowedValues": [
        "Polling",
        "Listening"
      ],
      "defaultValue": "Listening",
      "metadata": {
        "description": "This is the Octopus agent mode, determines the set of rules to deploy"
      }
    }
  },
  "variables": {
  },
  "resources": [
    {
      "condition": "[equals(parameters('Mode'),'Listening')]",
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_Octopus_Listening_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows inbound connections from Octopus subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "10933",
        "sourceAddressPrefix": "[parameters('SourcePrefix')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 138,
        "direction": "Inbound"
      }
    },
    {
      "condition": "[equals(parameters('Mode'),'Polling')]",
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_Octopus_Polling_OUTBOUND_10943')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows inbound connections to Octopus subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "10943",
        "sourceAddressPrefix": "[parameters('DestinationPrefix')]",
        "destinationAddressPrefix": "[parameters('SourcePrefix')]",
        "access": "Allow",
        "priority": 139,
        "direction": "Outbound"
      }
    },
    {
      "condition": "[equals(parameters('Mode'),'Polling')]",
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_Octopus_Polling_OUTBOUND_443')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows inbound connections to Octopus subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[parameters('DestinationPrefix')]",
        "destinationAddressPrefix": "[parameters('SourcePrefix')]",
        "access": "Allow",
        "priority": 140,
        "direction": "Outbound"
      }
    }
  ],
  "outputs": {
  }
}
