Rackspace.Utilities/sftclient-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "2018.12.01.0",
  "parameters": {
    "Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the NSG to update"
      }
    },
    "SourcePrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the bastion subnet"
      }
    },
    "DestinationPrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the subnet this NSG is attached to"
      }
    }
  },
  "variables": {
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RACK_BASTION_RDP_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP inbound from local RBAST subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[parameters('SourcePrefix')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 112,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RACK_BASTION_SSH_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH inbound from local RBAST subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[parameters('SourcePrefix')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 113,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RACK_BASTION_WinRM_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM inbound from local RACK_BASTION subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[parameters('SourcePrefix')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 114,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RACK_BASTION_SFTBROKER_INBOUND')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows ScaleFT Broker agent inbound from local RACK_BASTION subnet",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "4421",
        "sourceAddressPrefix": "[parameters('SourcePrefix')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 115,
        "direction": "Inbound"
      }
    }
  ],
  "outputs": {
  }
}
