Rackspace.Utilities/update-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "2019.06.01.0",
  "parameters": {
    "Name": {
      "type": "string",
      "defaultValue": "Bastion-NSG"
    },
    "ResourceGroupName": {
      "type": "string",
      "defaultValue": "testing-rg"
    },
    "SecurityRules": {
      "type": "array",
      "defaultValue": [
        {
          "name": "remoteConnection",
          "description": "Allow SSH traffic",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "22",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 301,
          "direction": "Inbound"
        },
        {
          "name": "webTraffic",
          "description": "Allow web traffic",
          "protocol": "Tcp",
          "sourcePortRange": "80",
          "destinationPortRange": "80",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 300,
          "direction": "Inbound"
        }
      ]
    }
  },
  "variables": {
    "SecurityRules": {
      "copy": [
        {
          "name": "SecurityRules",
          "count": "[length(parameters('SecurityRules'))]",
          "input": {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('Name'),'/',parameters('SecurityRules')[copyIndex('SecurityRules')].name)]",
            "location": "[resourceGroup().location]",
            "properties": {
              "description": "[parameters('SecurityRules')[copyIndex('SecurityRules')].description]",
              "protocol": "[parameters('SecurityRules')[copyIndex('SecurityRules')].protocol]",
              "sourcePortRange": "[parameters('SecurityRules')[copyIndex('SecurityRules')].sourcePortRange]",
              "destinationPortRange": "[parameters('SecurityRules')[copyIndex('SecurityRules')].destinationPortRange]",
              "sourceAddressPrefix": "[parameters('SecurityRules')[copyIndex('SecurityRules')].sourceAddressPrefix]",
              "destinationAddressPrefix": "[parameters('SecurityRules')[copyIndex('SecurityRules')].destinationAddressPrefix]",
              "access": "[parameters('SecurityRules')[copyIndex('SecurityRules')].access]",
              "priority": "[parameters('SecurityRules')[copyIndex('SecurityRules')].priority]",
              "direction": "[parameters('SecurityRules')[copyIndex('SecurityRules')].direction]"
            }
          }
        }
      ]
    },
    "deployment": {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2017-05-10",
      "resourceGroup": "[parameters('ResourceGroupName')]",
      "name": "[concat('Update-',parameters('Name'))]",
      "dependsOn": [],
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "2018.11.01.0",
          "parameters": {},
          "variables": {},
          "resources": "[variables('SecurityRules').SecurityRules]",
          "outputs": {}
        }
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2017-05-10",
      "resourceGroup": "[parameters('ResourceGroupName')]",
      "name": "[concat('Update-',parameters('Name'))]",
      "dependsOn": [],
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "2018.11.01.0",
          "parameters": {},
          "variables": {},
          "resources": "[variables('SecurityRules').SecurityRules]",
          "outputs": {}
        }
      }
    }
  ],
  "outputs": {
    "armTemplate": {
      "type": "object",
      "value": {
        "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
        "contentVersion": "2019.06.01.0",
        "parameters": {},
        "variables": {},
        "resources": "[variables('deployment')]",
        "outputs": {}
      }
    }
  }
}
